deployments/tooling/umami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: umami-ingress
  namespace: tooling
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ${UMAMI_HOST}
      secretName: umami-ingress
  rules:
    - host: ${UMAMI_HOST}
      http:
        paths:
          - pathType: Exact
            path: /x
            backend:
              service:
                name: umami
                port:
                  number: 80
          - pathType: Exact
            path: /events
            backend:
              service:
                name: umami
                port:
                  number: 80
